head as include

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,5 @@
+{% include head.html %}
+
 <!-- index.html -->
 <div class="site-wrapper">
   <div class="site-wrapper-inner">
@@ -16,10 +18,10 @@
 
       <div class="mastfoot">
         <div class="inner">
-          <!--<p>2016</p>-->
         </div>
       </div>
     </div>
   </div>
 </div>
+{% include footer.html %}
 <!-- /index.html -->
