--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,6 @@
-{% include head.html %}
-
+---
+layout:default
+---
 <!-- index.html -->
 <div class="site-wrapper">
   <div class="site-wrapper-inner">
@@ -15,13 +16,7 @@
           <a href="{{site.url}}{{site.baseurl}}/snippets" class="btn btn-lg btn-home">Snippets</a>
         </p>
       </div>
-
-      <div class="mastfoot">
-        <div class="inner">
-        </div>
-      </div>
     </div>
   </div>
 </div>
-{% include footer.html %}
 <!-- /index.html -->
