--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,10 +10,10 @@ layout: default
         <h1 class="display-1 cover-heading">Victor Fischer Scattone</h1>
         <p class="lead"></p>
         <p class="lead">
-          <a href="{{site.url}}{{site.baseurl}}/about" class="btn btn-lg btn-home">About</a>
-          <a href="{{site.url}}{{site.baseurl}}/blog" class="btn btn-lg btn-home">Blog</a>
-          <a href="{{site.url}}{{site.baseurl}}/projects" class="btn btn-lg btn-home">Projects</a>
-          <a href="{{site.url}}{{site.baseurl}}/snippets" class="btn btn-lg btn-home">Snippets</a>
+          <a href="{{site.url}}{{site.baseurl}}/about" class="btn btn-lg btn-home">About.</a>
+          <a href="{{site.url}}{{site.baseurl}}/blog" class="btn btn-lg btn-home">Blog.</a>
+          <a href="{{site.url}}{{site.baseurl}}/projects" class="btn btn-lg btn-home">Projects.</a>
+          <a href="{{site.url}}{{site.baseurl}}/snippets" class="btn btn-lg btn-home">Snippets.</a>
         </p>
       </div>
     </div>
