--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-fixed-top navbar-vfs">
   <div class="container">
   <a class="navbar-brand" href="{{site.url}}{{site.baseurl}}">VFS.io</a>
-  <ul class="nav navbar-nav pull-xs-right">
+<!--   <ul class="nav navbar-nav pull-xs-right">
     <li class="nav-item">
       <a class="nav-link" href="{{site.url}}{{site.baseurl}}/about">About</a>
     </li>
@@ -15,7 +15,7 @@
     <li class="nav-item">
       <a class="nav-link" href="{{site.url}}{{site.baseurl}}/snippets">Snippets</a>
     </li>
-  </ul>
+  </ul> -->
   </div>
 </nav>
 <!-- /_includes/nav.html -->
